# InboxCast

./: .gitignore  PRD.md  README.md  example.env  main.py  pyproject.toml  start_webapp.sh
.github/workflows/: ci.yml
apidoc/: minimax-api.md
app/: README.md  __init__.py  main.py
app/routers/: audio.py  auth.py  content.py  rss.py
app/static/: script.js  style.css
app/templates/: index.html
models/: __init__.py  content_model.py  gemini_model.py  voiceover_model.py
services/: __init__.py  gemini_service.py  gmail_service.py  minimax_service.py  rss_service.py
tests/: __init__.py  test_content_model.py  test_gemini_model.py  test_gemini_service.py  test_gmail_service.py  test_minimax_service.py  test_rss_service.py  test_voiceover_model.py
